--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Forecasting_Evaluation/__pycache__/Evaluator.cpython-312.pyc
 ML_Preparation/__pycache__/scrape_data.cpython-312.pyc
 Forecasting_Evaluation/__pycache__/Forecasting_Models.cpython-312.pyc
 *.pyc
+__pycache__/*.pyc
