--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ML_Preparation/__pycache__/scrape_data.cpython-312.pyc
 Forecasting_Evaluation/__pycache__/Forecasting_Models.cpython-312.pyc
 *.pyc
 __pycache__/*.pyc
+*.dat
